--- a/css/payment.css
+++ b/css/payment.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 15px;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 #payment-detail {
@@ -33,9 +33,9 @@
     background-color: #eab099;
     color: #5D4037;
     font-family: Momo Trust Display, Arial, sans-serif;
-    font-size: 24px;
+    font-size: 16px;
     width: 220px;
-    height: 50px;
+    padding: 10px 10px;
     border-radius: 50px;
     transition: background-color 0.5s, color 0.5s, opacity 0.2s, scale 0.2s;
     cursor: pointer;
@@ -50,4 +50,5 @@
     opacity: 0.7;
     scale: 85%;
 }
+
 
